kubernetes/apps/kavita/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kavita
  namespace: kavita
spec:
  parentRefs:
    - name: vps-gateway
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - "kavita.robin-vidal.com"
  rules:
    - backendRefs:
        - name: kavita
          port: 5000
